# QRFrame

./: CMakeLists.txt  LICENSE  README.md
Rgraph/: CMakeLists.txt  DivideQGP.cpp  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateQueryPlan.cpp  MatchQGP.cpp  Rgraph.cpp  Rgraph.h  UnionFindSet.cpp  UnionFindSet.h
graph/: graph.cpp
matching/: CMakeLists.txt  StudyPerformance.cpp
test/ruled_graph/: query_16_1.graph
utility/han/utils/: util.cpp  util.hpp
